--- a/index.html
+++ b/index.html
@@ -30,5 +30,63 @@
         <img src="images/first_container.jpg" alt="photo" />
       </div>
     </div>
+    <div class="second_container">
+      <div class="main_text">Some random information.</div>
+      <div class="flex_container">
+        <div class="item">
+          <div class="photo">
+            <img src="images/item1.jpg" alt="f1" width="300px" />
+          </div>
+          <div class="text">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s.
+          </div>
+        </div>
+        <div class="item">
+          <div class="photo">
+            <img src="images/item2.jpg" alt="f1" width="300px" />
+          </div>
+          <div class="text">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s.
+          </div>
+        </div>
+        <div class="item">
+          <div class="photo">
+            <img src="images/item3.jpg" alt="f1" width="300px" />
+          </div>
+          <div class="text">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s.
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="third_container">
+      <div class="quote_container">
+        <div class="quote">
+          <em>
+            If you no longer go for a gap that exists, you’re no longer a racing
+            driver</em
+          >
+        </div>
+        <div class="quote_author">– Ayrton Senna</div>
+      </div>
+    </div>
+    <div class="sign_up_container">
+      <div class="flex_left">
+        <div class="main_text">Call to action! It's time!</div>
+        <div class="secondary_text">
+          Sign up for our website by clicking that button right over there!
+        </div>
+      </div>
+      <div class="flex_right">
+        <div class="sign_up"><button>Sing up</button></div>
+      </div>
+    </div>
+    <div class="footer">Copyright © The Odin Project 2021</div>
   </body>
 </html>
